--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -247,7 +247,8 @@ $navbar-logo-width: 100% !default;
 }
 
 .navbar-logo {
-  max-height: $navbar-logo-height;
+  // max-height: $navbar-logo-height;
+  max-height: 30px;
   width: $navbar-logo-width;
 }
 
